// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotebookSharingOptions-personal correctly renders correct snapshot 1`] = `
<div
  className="makeStyles-select-1"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-title-2"
    variant="body1"
  >
    Private
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-description-3"
    variant="body1"
  >
    Only you can view and interact with this notebook.
  </WithStyles(ForwardRef(Typography))>
</div>
`;

exports[`NotebookSharingOptions-project correctly renders correct snapshot 1`] = `
<div
  className="makeStyles-select-1"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-title-2"
    variant="body1"
  >
    Project
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-description-3"
    variant="body1"
  >
    Anyone in this project can view and interact with this notebook.
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-warning-4"
    variant="body1"
  >
    NOTE: This option will allow multiple users to view and edit notebooks at the same time. As real-time collaboration is not currently supported this may result in corruption, hence this option should be chosen primarily for notebooks that are being viewed/run rather than edited.
  </WithStyles(ForwardRef(Typography))>
</div>
`;
